tests/NormalTests/paczka1/fuzzy1/80524365.err
Error in line 2: S460 S682 50,3
Error in line 6: m55f5C S635 69,5
Error in line 17: RGxl1e1j S460 33,2
Error in line 26: uG8gEsHt6JD S682 87,2
Error in line 27: m55f5C S635 48,8
